feat(worker): choose the execution model instead of inheriting the client's one thread
The Camunda client owns one executor per client and this adapter owns one client per
adapter id, so a single number decides how much of everything an adapter delivers may
run at once. Until now that number was the client's own default of one, nothing passed
it through, and on the 8.8 client that one thread runs the handler invocations AND the
poll scheduling of every worker. Measured against a real cluster: an unrelated job of
another worker waited 8013 ms behind a blocking handler and 13 ms with four threads,
and a poll scheduled with a delay of 100 ms started 4837 ms late while the broker's
counter of completed activation requests stood still. The second half is what made this
worth its own story - the backlog was invisible to every client-side signal.

vanillabp.adapters.<id>.worker-threads takes a positive number or the literal
'virtual', at adapter level because the executor is per client. The default is four
platform threads: more than one because one is the defect above, and small because every
concurrent handler holds a database connection inside VanillaBP's transaction while it
runs, so four leaves room for the rest of an application whose pool is ten or twenty
connections wide.

The virtual mode was measured before it was offered. On Java 21 a synchronized block
around a blocking call pins the carrier thread, which inside a transaction would be a
silent regression, so it was settled with a probe: -Djdk.tracePinnedThreads=full plus the
jdk.VirtualThreadPinned JFR event over 64 virtual threads x 50 transactions, against
Spring's DataSourceTransactionManager with HikariCP and against Narayana with Agroal,
each on embedded H2, on H2 over a socket and on PostgreSQL 16. Zero pinning in all six,
with a positive control proving the detection worked. So 'virtual' is a supported mode
and the default still stays at four platform threads, which buys the same bound without
a second s